title icon is add

--- a/index.html
+++ b/index.html
@@ -4,14 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="icon" type="image/png" href=""> -->
+    <link rel="icon" type="image/png" href="images/weather.png">
     <link rel="stylesheet" href="style.css">
     <title>Weather App</title>
 </head>
 
 <body>
     <div class="container">
+        <div class="header-img">
         <h1>Weather App</h1>
+        <img src="images/weather.png" alt="">
+        </div>
         <form>
             <input type="text" id="city-input" placeholder="Enter City...">
             <input type="submit" class="submit" value="Get Weather">
