--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <div class="icon">
                 <!-- <img src="http://openweathermap.org/img/wn/01d.png" alt="weather icon"> -->
             </div>
-            <div class="temperature">22°C</div>
-            <div class="description">Sunny</div>
+            <div class="temperature"></div>
+            <div class="description"></div>
             <div class="details">
                 <!-- <div>Feels like: 23°C</div>
                 <div>Humidity: 40%</div>
